# kommatipara

./: README.md  pyproject.toml  query_tables.ipynb  requirements.txt
.github/workflows/: run-github-actions.yml
scripts/: load_client_data.py
scripts/resources/: config.json
src/kommatipara/: models.py  raw.py  transform.py  utilities.py
tests/: test_raw.py  test_transform.py  test_utilities.py
